# chksound

./: Cargo.toml
src/: main.rs
src/audio/: bs1770.rs  macos.rs  mod.rs  unix.rs  windows.rs
test_data/: sample.m4a
