[package]
name = "chksound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cfg-if = "1.0.0"
id3 = "1.2.0"
mp4ameta = "0.11.0"
once_cell = "1.12.0"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.9.3"
core-foundation-sys = "0.8.3"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.37.0", features = ["alloc", "Win32_Media_MediaFoundation"] }

[target."cfg(unix)".dependencies]
libc = "0.2.126"
