[package]
name = "chksound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
cfg-if = "1.0.0"
clap = { version = "4.3.19", features = ["derive"] }
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
id3 = "1.7.0"
log = "0.4.19"
mp4ameta = "0.11.0"
once_cell = "1.18.0"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.9.3"
core-foundation-sys = "0.8.4"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.48.0", features = ["Win32_Media_MediaFoundation"] }

[target."cfg(unix)".dependencies]
libc = "0.2.147"
